# pyfsr

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASING.md  contributing.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reference-advanced.html  reference-models.html  reference.html  search.html  searchindex.js
.doctrees/: contributing.doctree  environment.pickle  getting-started.doctree  index.doctree  reference-advanced.doctree  reference.doctree
.doctrees/api/: alerts.doctree  auth.doctree  client.doctree  files.doctree
.doctrees/autoapi/: index.doctree
.doctrees/guides/: ai-agents.doctree  appliance-cli.doctree  authentication.doctree  connectors.doctree  content-hub-mirror.doctree  export-import.doctree  module-admin.doctree  module-field-schema.doctree  playbook-authoring.doctree  playbook-yaml-reference.doctree  querying.doctree  records.doctree  repo-cli.doctree
.github/: dependabot.yml
.github/workflows/: docs.yml  pr-tests.yml  publish.yml
_modules/: index.html
_modules/pyfsr/: appliance.html  authoring.html  client.html  concurrency.html  config.html  constants.html  content_catalog.html  exceptions.html  fields.html  instances.html  mcp.html  models.html  pagination.html  playbook_lint.html  playbook_match.html  projection.html  query.html  query_models.html  records.html  repo.html  spec.html  tools.html
_sources/: getting-started.md.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/guides/: ai-agents.md.txt  module-field-schema.md.txt  playbook-authoring.md.txt  querying.md.txt
api/: alerts.html  auth.html  client.html  files.html
autoapi/: index.html
autoapi/pyfsr/: index.html
deploy/content-hub-mirror/: .gitignore  Dockerfile  README.md  build.sh  build_catalog.py  chctl  connector_publish.py  docker-compose.yml  entrypoint.sh  example_install_updated_connector.py  setup-appliance.sh  smoke-test-connector.sh  smoke-test-proxy.sh  smoke-test.sh
docs/: Makefile  appliance_cli_validation.md  doctest_counts.baseline.json
docs/plans/: PYFSR_SDK_ROADMAP.md
docs/source/: conf.py  contributing.md  getting-started.md  index.md  index.rst  reference-advanced.md  reference-models.md  reference.md
examples/: README.md  all_field_types_module.py  appliance_cli_live_example.py  appliance_cli_test_demo.py  connect_fortisiem_mcp.py  create_safe_playbook.py  deploy_playbook_from_yaml.py  describe_module.py  do_until_validation_loop.py  ensure_connector_version.py  example_usage.py  export_import_records.py  export_solution_pack.py  fortisiem_mcp_setup_and_test.py  heist_tracker.py  investigate_fortisiem_incident.py  list_alerts.py  manage_connectors.py  native_mcp_gateway.py  playbook_structural_queries.py  playbooks_api_smoke.py  queries.py  register_and_call_public_mcp_server.py  repo_discover_and_download.py  run_single_ai_agent.py  sample_csv.csv  siem_influence_trials.py  solution_pack_full_lifecycle.py  solution_pack_lifecycle.py  taxii_threat_feed_to_fortigate.py  test_fortisiem_mcp_evidence.py  trigger_ai_investigation.py  tune_new_instance.py  upload_attachment_record.py  validate_fortisiem_used.py
examples/playbooks/: do_until_validation_demo.yaml  heist_intake.yaml  version_lifecycle_demo.yaml  yaml_demo.yaml
guides/: ai-agents.html  appliance-cli.html  authentication.html  connectors.html  content-hub-mirror.html  export-import.html  module-admin.html  module-field-schema.html  playbook-authoring.html  playbook-yaml-reference.html  querying.html  records.html  repo-cli.html
scripts/: archetype_pilot_reconcile_and_report.yaml  archetype_pilot_reconcile_and_report_coderunner.yaml  archetype_pilot_reconcile_and_report_coderunner_smtpng.yaml  capture_appliance_fixtures.py  capture_responses.py  check_doc_examples.py  check_fresh.py  check_no_lab_ips.py  check_no_leaks.py  deploy_code_runner.py  deploy_recon_modules.py  exec_cli_examples.py  gen_models.py  gen_models_reference.py  loadtest.py  manage_docs.py  pilot_reconcile_setup.py  publish_probe.py  test_loadtest.py  test_publish_probe.py  validate_dx_live.py
src/pyFSR/: client.py
src/pyfsr/: __init__.py  _concurrency.py  appliance.py  authoring.py  client.py  concurrency.py  config.py  content_catalog.py  exceptions.py  fields.py  instances.py  loadtest.py  mcp.py  pagination.py  playbook_catalog.py  playbook_freshness.py  playbook_library.py  playbook_lint.py  playbook_match.py  projection.py  publish_probe.py  query.py  query_models.py  records.py  repo.py  spec.py  tools.py
tests/: README.md  config.toml.example  conftest.py
tests/integration/: conftest.py  test_client_integration.py  test_connectors_playbooks_integration.py  test_do_until_manual_input_integration.py  test_export_import_roundtrip_integration.py  test_export_records_integration.py  test_operator_matrix_integration.py  test_picklists_integration.py  test_playbook_versions_integration.py  test_records_integration.py  test_result_probe_integration.py  test_system_models_integration.py  test_usage_walkthrough_integration.py
tests/resources/: operator_matrix.json
tests/test_api/: test_solutuion_pack.py
tests/unit/: test_access_management.py  test_actors_reporting_rules.py  test_agents_routers.py  test_ai.py  test_ai_agent_package.py  test_alerts.py  test_app_config.py  test_appliance_cli.py  test_appliance_content_hub.py  test_appliance_facade.py  test_appliance_host.py  test_appliance_mcp_tools.py  test_archetypes.py  test_attachments_export_templates.py  test_auth.py  test_auth_resolution.py  test_authoring_findability.py  test_authoring_helpers.py  test_cli_main_handlers.py  test_cli_mcp_verbs.py  test_cli_playbook_handlers.py  test_cli_record_verbs.py  test_cli_widget.py  test_client.py  test_client_dx.py  test_client_reauth_version.py  test_concurrency.py  test_config.py  test_connectors.py  test_content_catalog.py  test_content_hub.py  test_diagnose_run.py  test_doc_examples.py  test_docstring_doctests.py  test_ensure_idempotent.py  test_exceptions.py  test_export_config.py  test_fields.py  (+61 more)
(+589 files in other folders)
