[project]
name = "pyfsr"
version = "0.1.2"
description = "Python implementation of the FortiSOAR REST API"
readme = "README.md"
authors = [
    { name = "Dylan Spille", email = "dspille@fortinet.com" }
]
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.urls]
"Homepage" = "https://github.com/ftnt-dspille/pyFSR"
"Bug Tracker" = "https://github.com/ftnt-dspille/pyFSR/issues"