[project]
name = "pyfsr"
dynamic = ["version"]
description = "Python implementation of the FortiSOAR REST API"
readme = "README.md"
authors = [
    { name = "Dylan Spille", email = "dspille@fortinet.com" }
]
license = { text = "MIT" }
keywords = ["fortinet", "fortisoar", "api", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0"
]

[project.optional-dependencies]
test = [
    "coverage>=7.6.9",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

docs = [
    "sphinx>=8.1.3",
    #    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-autoapi>=3.4.0",
    "pydata-sphinx-theme"
]

# One-shot dev setup: linters + the test/docs extras.
dev = [
    "pyfsr[test,docs]",
    "ruff>=0.6",
    "pre-commit>=3.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from git tags (vX.Y.Z) — single source of truth.
# Release flow: commit on main -> `git tag vX.Y.Z` -> GitHub Release -> PyPI.
[tool.hatch.version]
source = "vcs"

# Only honor clean release tags (vX.Y.Z); ignore stray tags like
# "v0.2.4-tag" / "v0.2.2-fix" that aren't valid PEP 440 versions.
[tool.hatch.version.raw-options]
tag_regex = '^v(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$'

[tool.hatch.build.hooks.vcs]
version-file = "src/pyfsr/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsr"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Integration tests need a live FortiSOAR (examples/config.toml) and are
# deselected by default. Run them explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live FortiSOAR instance (examples/config.toml); deselected by default",
]
[tool.coverage.run]
omit = [
    "Applications/PyCharm.app/*",
    "src/pyfsr/_version.py",
]

[project.urls]
"Homepage" = "https://github.com/ftnt-dspille/pyfsr"
"Bug Tracker" = "https://github.com/ftnt-dspille/pyfsr/issues"
"Documentation" = "https://ftnt-dspille.github.io/pyfsr/"
