[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyfsr"
dynamic = ["version"]
description = "Python implementation of the FortiSOAR REST API"
readme = "README.md"
authors = [
    { name = "Dylan Spille", email = "dspille@fortinet.com" }
]
license = { text = "MIT" }
keywords = ["fortinet", "fortisoar", "api", "rest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2"
]

[project.optional-dependencies]
test = [
    "coverage>=7.6.9",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mcp>=1.0", # exercise the optional pyfsr[mcp] server in CI
]

typecheck = [
    "mypy>=1.13",
]

# Sphinx is bound to a single major (>=9.1,<10): the nitpicky `-W -n` docs gate
# is version-sensitive (8.x rejects type-alias xrefs that 9.x resolves), so an
# unbounded floor let CI (8.1.3) and dev machines (9.1) diverge and produce
# false-green pre-push hooks. Keep the floor == what the docs gate is verified
# against; bump deliberately, not implicitly.
docs = [
    # Marker-gated: sphinx 9.1 requires Python >=3.12 while the library itself
    # supports >=3.10. Without the marker the dependency set is unresolvable for
    # 3.10/3.11 and `uv lock` fails outright, freezing uv.lock (which once left
    # it pinned to an fsr_playbooks below the floor below). Docs are built on
    # 3.12 in CI, so gating here costs nothing.
    "sphinx>=9.1,<10; python_version >= '3.12'",
    "sphinx-autodoc-typehints>=3.0.0",
    "sphinx-autoapi>=3.8,<4",
    "furo>=2024.8.6",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=4.0.0",
]

# Optional generic MCP server: `python -m pyfsr.agent.mcp` over the tool registry.
# Pulls in the Model Context Protocol SDK; the core library never imports it.
mcp = [
    "mcp>=1.0",
]

# Author playbooks in YAML and deploy them (`pyfsr playbook`, import_from_yaml).
# Pulls in the fsr_playbooks compiler; the core library never imports it.
# Floor is 0.4.10: the authoring-DX surface (manual_input.answer, do_until
# example) relies on the compiler's step-level manual_input inputs/title/
# description hoist (F3) + the default-on reference lint, both first shipped in
# 0.4.10 — older versions silently drop those inputs.
playbooks = [
    "fsr_playbooks>=0.4.11",
]

[project.scripts]
pyfsr = "pyfsr.cli.__main__:main"
# Multi-instance MCP server for MCP-capable agents (needs the `mcp` extra).
pyfsr-mcp = "pyfsr.agent.mcp:main"

# Local dev toolchain (PEP 735 dependency group). uv installs the `dev` group
# automatically on a bare `uv sync` (default-groups defaults to ["dev"]), so
# PyCharm's background auto-sync keeps ruff/pre-commit/pytest/mypy/sphinx in
# .venv. Previously `dev` was an *extra*, which a default `uv sync` does NOT
# install — so the sync dropped `pre_commit` and broke the git pre-push hook
# (`.venv/bin/python -mpre_commit`). CI is unaffected: it installs the
# individual extras (test/docs/typecheck/playbooks) via pip, not this group.
# Manual install without uv: `pip install -e . --group dev` (pip >= 25.1).
[dependency-groups]
dev = [
    "pyfsr[test,docs,mcp,playbooks,typecheck]",
    "ruff>=0.6",
    "pre-commit>=3.5",
]


[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/pyfsr/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfsr"]

# Ship the bundled OpenAPI spec (gzipped JSON) inside the wheel + sdist.
[tool.hatch.build]
artifacts = ["src/pyfsr/resources/*.json.gz"]
# Keep dev/local-only cruft out of the sdist. ``.claude`` is the Claude Code
# session/worktree dir (untracked, but hatch's default sdist scoops up
# everything not VCS-ignored by its own rules); a stale worktree there once
# re-shipped a scrubbed lab IP to PyPI. The rest are local dev tooling with no
# place in a source distribution. (examples/ and docs/ ARE shipped -- scrubbed
# and gate-protected, and useful to anyone unpacking the source.)
exclude = [
    ".claude",
    ".coveragerc",
    ".python-version",
    "uv.lock",
]

[tool.mypy]
# Scoped to the CLI + the pydantic-converted modules: the CLI is the most
# user-facing surface and was the first to be ~83% annotated; the pydantic
# modules (config/instances/authoring/concurrency/playbook_lint/
# playbook_match/playbook_library) were converted from dataclasses in the
# 2026-07-20 pass-1/pass-2 sweep and cleaned to the same strict bar.
# `follow_imports = silent` resolves types from the rest of pyfsr (and
# third-party) for accuracy but does NOT report errors outside the gate,
# keeping it focused. Widen `files` as other packages get typed.
python_version = "3.10"
files = [
    "src/pyfsr/cli",
    "src/pyfsr/appliance.py",
    "src/pyfsr/config.py",
    "src/pyfsr/instances.py",
    "src/pyfsr/authoring.py",
    "src/pyfsr/concurrency.py",
    "src/pyfsr/playbook_lint.py",
    "src/pyfsr/playbook_match.py",
    "src/pyfsr/playbook_library.py",
]
follow_imports = "silent"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Unverified HTTPS request",
]
# Integration tests need a live FortiSOAR (examples/config.toml) and are
# deselected by default. Run them explicitly with: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: requires a live FortiSOAR instance (examples/config.toml); deselected by default",
]
[tool.coverage.run]
omit = [
    "Applications/PyCharm.app/*",
    "src/pyfsr/_version.py",
]

[tool.coverage.report]
# Lines matching these patterns are excluded from coverage: defensive branches
# and non-runtime code that aren't worth exercising in tests.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "class .*\\(Protocol\\):",
]

[project.urls]
"Homepage" = "https://github.com/ftnt-dspille/pyfsr"
"Bug Tracker" = "https://github.com/ftnt-dspille/pyfsr/issues"
"Documentation" = "https://ftnt-dspille.github.io/pyfsr/"
